CLI based file conversion